--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo App</title>
+    <link rel="stylesheet" href="./app.css">
 </head>
 <body>
-    
+    <section class="container">
+        <h1>Todo</h1>
+        <form action="#">
+            <input type="text" placeholder="Enter Task">
+            <button class="addTaskBtn" type="submit">+ Add</button>
+        </form>
+        <section class="taskContainer">
+            <!-- todo section goes here -->
+        </section>
+    </section>
+    <script src="./app.js"></script>
 </body>
 </html>
